Fix title too big on some pages

--- a/weblate_web/static/style-rtl.css
+++ b/weblate_web/static/style-rtl.css
@@ -1234,6 +1234,8 @@ body.pabout {
 	margin-bottom: 25px;
 	line-height: 36px;
 	border-bottom: 1px solid #FFFFFF;
+}
+.donate.page .donations-cols .col .title {
     min-height: 135px;
 }
 .donations-cols .col a.format-item, .box a.format-item {
