--- a/weblate_web/static/style.css
+++ b/weblate_web/static/style.css
@@ -1236,7 +1236,9 @@ body.pabout {
 	letter-spacing: -0.5px;
 	margin-bottom: 25px;
 	line-height: 36px;
-	border-bottom: 1px solid #FFFFFF;
+    border-bottom: 1px solid #FFFFFF;
+}
+.donate.page .donations-cols .col .title {
     min-height: 135px;
 }
 .donations-cols .col a.format-item, .box a.format-item {
